# VirtualDevice

./: CMakeLists.txt  README.md
include/: Device.h  Log.h
src/: Device.cpp  MediaService.cpp  MediaService.h  main.cpp
